# anki-animal-ranch

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SPRITE_GENERATION_GUIDE.md  pyproject.toml  run_game.py
anki_animal_ranch/: CLAUDE.md  __init__.py  manifest.json
anki_animal_ranch/assets/: .gitkeep
anki_animal_ranch/core/: CLAUDE.md  __init__.py  changelog.py  constants.py  event_bus.py  time_system.py
anki_animal_ranch/data/: CLAUDE.md  __init__.py  account_manager.py  save_manager.py
anki_animal_ranch/models/: CLAUDE.md  __init__.py  animal.py  building.py  decoration.py  farm.py  player.py  product.py
anki_animal_ranch/network/: CLAUDE.md  __init__.py  supabase_client.py
anki_animal_ranch/rendering/: CLAUDE.md  __init__.py  camera.py  isometric_view.py  sprite.py  tile_grid.py
anki_animal_ranch/services/: CLAUDE.md  __init__.py  market_service.py  pricing.py  shop_service.py
anki_animal_ranch/systems/: CLAUDE.md  __init__.py  animal_ai.py  growth_system.py
anki_animal_ranch/ui/: CLAUDE.md  __init__.py  main_window.py  placement_state.py  sprite_manager.py  theme.py
anki_animal_ranch/ui/dialogs/: __init__.py  account_dialog.py  building_dialog.py  changelog_dialog.py  decoration_dialog.py  market_dialog.py  settings_dialog.py  shop_dialog.py  visit_friend_dialog.py  zone_dialog.py
anki_animal_ranch/ui/panels/: __init__.py  side_panel.py
anki_animal_ranch/ui/widgets/: __init__.py  animal_row.py  product_row.py
anki_animal_ranch/utils/: __init__.py  logger.py  math_utils.py  pathfinding.py
scripts/: build_addon.sh  bump_version.sh  extract_sprites.py
tests/: __init__.py  conftest.py
tests/test_models/: test_animal.py
